<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInterface">

    <TextView
        android:id="@+id/user_interface_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/user_interface"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/preference_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:fontFamily="@font/alegreya_bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/user_text"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/favorites_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:fontFamily="@font/alegreya_bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_text" />

    <TextView
        android:id="@+id/activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activities"
        android:fontFamily="@font/alegreya_bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hour_title"/>

    <Button
        android:id="@+id/to_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapping"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toStartOf="@id/to_filter_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activities" />

    <Button
        android:id="@+id/to_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtering"
        android:layout_marginLeft="50dp"
        app:layout_constraintStart_toEndOf="@+id/to_map_button"
        app:layout_constraintTop_toBottomOf="@+id/activities"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:fontFamily="@font/alegreya_bold"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/user_interface_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferred_price"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_title"/>

    <TextView
        android:id="@+id/hour_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferred_hour"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_title" />

    <TextView
        android:id="@+id/price_pref_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/price_title"
        app:layout_constraintTop_toBottomOf="@+id/preference_title" />

    <TextView
        android:id="@+id/hour_pref_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/hour_title"
        app:layout_constraintTop_toBottomOf="@+id/price_pref_text" />

    <Button
        android:id="@+id/pref_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textSize="12sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        app:layout_constraintStart_toEndOf="@+id/price_pref_text"
        app:layout_constraintTop_toBottomOf="@+id/preference_title" />

    <Button
        android:id="@+id/favorites_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:layout_marginRight="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorites_title" />

    <FrameLayout
        android:id="@+id/mapFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/to_map_button">
    </FrameLayout>

    <Button
        android:id="@+id/cancel_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toStartOf="@id/to_filter_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activities" />

</androidx.constraintlayout.widget.ConstraintLayout>