<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="313dp"
        android:layout_height="84dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/drinking_buddies"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="0dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@id/registerButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCheers" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register"
        app:layout_constraintStart_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/imageCheers" />

    <ImageView
        android:id="@+id/imageCheers"
        android:layout_width="224dp"
        android:layout_height="283dp"
        android:src="@drawable/cheersicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/content_cheers_image" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.drinkingbuddies.BarLocationsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="575dp" />

</androidx.constraintlayout.widget.ConstraintLayout>